--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: multiple
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Title: Compute Multiple
+Version: 0.0-0.9000
+Authors@R: person("Bach", "Nguyen", email = "nlxbach@gmail.com", role = c("aut", "cre"))
+Description: This is a first R's package (2018).
 Depends: R (>= 3.5.0)
-License: What license is it under?
+License: GNU General Public Licence
 Encoding: UTF-8
 LazyData: true
