--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.0-0.9000
 Authors@R: person("Bach", "Nguyen", email = "nlxbach@gmail.com", role = c("aut", "cre"))
 Description: This is a first R's package (2018).
 Depends: R (>= 3.5.0)
-License: GNU General Public Licence
+License: GNU General Public License
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
