--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Compute Multiple
 Version: 0.0-0.9000
 Authors@R: person("Bach", "Nguyen", email = "nlxbach@gmail.com", role = c("aut", "cre"))
 Description: This is a first R's package (2018).
-Depends: R (>= 3.5.0)
+Depends: R (>= 3.5.0), ggplot2
 License: GNU General Public License
 Encoding: UTF-8
 LazyData: true
