--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: multiple
 Title: Compute Multiple
-Version: 0.0-0.9000
+Version: 0.1-0
 Authors@R: person("Bach", "Nguyen", email = "nlxbach@gmail.com", role = c("aut", "cre"))
 Description: This is a first R's package (2018).
-Depends: R (>= 3.5.0), ggplot2
 License: GNU General Public License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Depends: R (>= 3.5.0), graphics, ggplot2
+Imports: stats
